--- a/dwh-migration-deb/pom.xml
+++ b/dwh-migration-deb/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-migration-deb</artifactId>
-	<version>1.5.1</version>
+	<version>1.6-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.5.1</version>
+		<version>1.6-SNAPSHOT</version>
 	</parent>
 
 	<build>
